--- a/EDA_feature_extraction.ipynb
+++ b/EDA_feature_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0b76f49",
+   "id": "82693ebd",
    "metadata": {},
    "source": [
     "# Speech Recognition Project"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a5d7c0",
+   "id": "4d1bd6fa",
    "metadata": {},
    "source": [
     "In this machine learning project, I aim to tackle the task of speech recognition, specifically identifying the speaker from audio recordings. The dataset used for this project is sourced from Mozilla's Common Voice Project, a publicly available repository of voice recordings contributed by volunteers worldwide. Leveraging deep learning techniques, particularly Long Short-Term Memory (LSTM) layers, our goal is to develop a robust model capable of accurately recognizing speakers from their voice samples.\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 202,
    "id": "27bd2300",
    "metadata": {
     "colab": {
@@ -57,6 +57,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
+    "\n",
+    "from scipy.stats import kurtosis\n",
     "\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras import Sequential\n",
@@ -213,21 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2327b0",
-   "metadata": {
-    "id": "9a2327b0"
-   },
-   "source": [
-    "### Features to extract\n",
-    "- MFCCs\n",
-    "- Chromagram\n",
-    "- Mel-spectrogram\n",
-    "- Spectral contrast\n",
-    "- Tonal centroid (Tonnetz)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7721e396",
    "metadata": {},
    "source": [
@@ -236,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ba324b",
+   "id": "b6e8146a",
    "metadata": {},
    "source": [
     "The mean length of clips is around 7 seconds. I'll use that duration to clip the audio files or zero-pad them if needed to standardize audio length"
@@ -277,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "921c3d4f",
+   "id": "277629bf",
    "metadata": {},
    "source": [
     "# Mel-Spectrograms "
@@ -456,7 +443,7 @@
    "id": "b3cc9abc",
    "metadata": {},
    "source": [
-    "### Neural Network \n",
+    "### LSTM Network \n",
     "mel-sgram shape: 128 x 113"
    ]
   },
@@ -540,27 +527,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "6ab4e709",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14152, 128, 113)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "aba38673",
    "metadata": {},
@@ -594,16 +560,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c554a69",
+   "id": "6214fba8",
    "metadata": {},
    "source": [
-    "# MFCCs"
+    "# MFCCs EDA"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "78afd9bf",
+   "id": "91fe153b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,9 +603,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "270f221b",
+   "metadata": {},
+   "source": [
+    "### Extract MFCCs "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4fe95b67",
+   "id": "a93ae136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "50a71cbe",
+   "id": "56976c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1f803f18",
+   "id": "5ae559ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,35 +641,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "e4186268",
+   "cell_type": "markdown",
+   "id": "d2f44287",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# mfcc_delta = librosa.feature.delta(mfcc, mode = 'wrap')\n",
-    "# mfcc_delta2 = librosa.feature.delta(mfcc, order = 2, mode = 'wrap')\n",
-    "\n",
-    "mfccs_df['delta'] = mfccs_df['mfccs'].apply(lambda x: librosa.feature.delta(x, mode = 'wrap'))"
+    "### Extract Delta and Delta 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d7d50610",
+   "id": "620b5fb7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "mfccs_df['delta'] = mfccs_df['mfccs'].apply(lambda x: librosa.feature.delta(x, mode = 'wrap'))\n",
+    "\n",
     "mfccs_df['delta_2'] = mfccs_df['mfccs'].apply(lambda x: librosa.feature.delta(x, order = 2, mode = 'wrap'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "32b7d326",
+   "id": "fabb1a06",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#MFCCs aggregate features\n",
     "mfccs_df['mfccs_mean'] = mfccs_df['mfccs'].apply(lambda x: x.mean())\n",
     "mfccs_df['mfccs_std'] = mfccs_df['mfccs'].apply(lambda x: x.std())\n",
     "mfccs_df['mfccs_max'] = mfccs_df['mfccs'].apply(lambda x: x.max())\n",
@@ -704,6 +676,7 @@
     "mfccs_df['mfccs_q2'] = mfccs_df['mfccs'].apply(lambda x: np.quantile(x, 0.5))\n",
     "mfccs_df['mfccs_q3'] = mfccs_df['mfccs'].apply(lambda x: np.quantile(x, 0.75))\n",
     "\n",
+    "#MFCCs Delta aggregate features\n",
     "mfccs_df['delta_mean'] = mfccs_df['delta'].apply(lambda x: x.mean())\n",
     "mfccs_df['delta_std'] = mfccs_df['delta'].apply(lambda x: x.std())\n",
     "mfccs_df['delta_max'] = mfccs_df['delta'].apply(lambda x: x.max())\n",
@@ -712,6 +685,8 @@
     "mfccs_df['delta_q2'] = mfccs_df['delta'].apply(lambda x: np.quantile(x, 0.5))\n",
     "mfccs_df['delta_q3'] = mfccs_df['delta'].apply(lambda x: np.quantile(x, 0.75))\n",
     "\n",
+    "\n",
+    "#MFCCs Delta2 aggregate features\n",
     "mfccs_df['delta2_mean'] = mfccs_df['delta_2'].apply(lambda x: x.mean())\n",
     "mfccs_df['delta2_std'] = mfccs_df['delta_2'].apply(lambda x: x.std())\n",
     "mfccs_df['delta2_max'] = mfccs_df['delta_2'].apply(lambda x: x.max())\n",
@@ -725,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "174a07ee",
+   "id": "5823da94",
    "metadata": {},
    "source": [
     "## Min to Max range of MFCCs"
@@ -734,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "43b6c58d",
+   "id": "b5916199",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46047d6",
+   "id": "809f7ebf",
    "metadata": {},
    "source": [
     "- MFCCs Range Distribution: The distribution of the MFCCs range shows a wide variation, indicating that the acoustic properties captured by the MFCCs differ significantly across the sounds in the dataset.\n",
@@ -802,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "16651842",
+   "id": "bf55b480",
    "metadata": {},
    "outputs": [
     {
@@ -831,28 +806,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "36dd620b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = mfccs_df['target'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "35486ed8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import kurtosis"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "79a1972d",
+   "id": "e2141575",
    "metadata": {},
    "source": [
     "## Distribution of Delta Mean"
@@ -861,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "d6a6083b",
+   "id": "4fd236bd",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "bd448571",
+   "id": "db6232d6",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5565b505",
+   "id": "2a55251b",
    "metadata": {},
    "source": [
     "__Variability Among Individuals:__ The variation in kurtosis values among the individuals highlights differences in the distribution of their sound characteristics. Those with higher kurtosis values (e.g., Kurtosis277) have more pronounced outliers in their mfccs_mean distribution. This could suggest a greater variability in how they produce sound, or it might reflect a wider range of vocal expressions captured in the dataset for these individuals."
@@ -921,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d5ec52",
+   "id": "748dae0d",
    "metadata": {},
    "source": [
     "## Visualizing Principal Components"
@@ -930,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "3b4b33bb",
+   "id": "6b6ee28a",
    "metadata": {
     "scrolled": false
    },
@@ -967,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22140ea7",
+   "id": "45f699f3",
    "metadata": {},
    "source": [
     "__Distinct Vocal Characteristics__: The presence of two distinct clusters suggests there are at least two groups of individuals with significantly different vocal characteristics captured by the MFCCs and their aggregated features. These differences might be due to a variety of factors, including but not limited to physiological differences, speaking styles, emotional expression, or even recording conditions."
@@ -976,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "fb8d92c2",
+   "id": "0383ca05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "91913754",
+   "id": "fa86c417",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55da408",
+   "id": "81c44d3d",
    "metadata": {},
    "outputs": [],
    "source": []
